src/test/resources/30/expanded/valid/issue198/OEBPS/content.opf
<?xml version="1.0" encoding="UTF-8"?>
<package xmlns="http://www.idpf.org/2007/opf" unique-identifier="BookID" version="3.0">
  <metadata xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:opf="http://www.idpf.org/2007/opf">
    <dc:title>Test Book</dc:title>
    <dc:identifier id="BookID" >id</dc:identifier>
    <dc:language>lang</dc:language>
    <meta property="dcterms:modified">2012-09-01T17:18:00Z</meta>
  </metadata>
  <manifest>
    <!-- TOC -->
    <item id="ncx" href="toc.ncx" media-type="application/x-dtbncx+xml" />

    <!-- PAGES -->
    <item id="page_0001.xhtml" href="page_0001.xhtml" properties="nav" media-type="application/xhtml+xml" />
    <item id="page_0002.xhtml" href="page_0002.xhtml" media-type="application/xhtml+xml" />

  </manifest>
  <spine toc="ncx">
    <itemref idref="page_0001.xhtml" />
    <itemref idref="page_0002.xhtml" />
 
  </spine>
</package>

